# asciidoc_rs

./: .editorconfig  Cargo.toml  LICENSE  test_file.adoc
src/: lib.rs  main.rs  telemetry.rs
