[package]
name = "asciidoc"
description = "A parser for asciidoc, in rust."
version = "0.1.0"
edition = "2021"

[lib]
name = "asciidoc"
path = "src/lib.rs"

[[bin]]
name = "asciidoc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features=["derive"] }
nom = "7.1.3"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
